--- a/styles.css
+++ b/styles.css
@@ -510,6 +510,9 @@ body {
 .dark-theme .contact h2 {
     color: #f4f4f9;
 }
+.dark-theme .projects h2{
+    color: #f4f4f9;
+}
 
 .dark-theme .hero h1,
 .dark-theme .hero p,
