--- a/styles.css
+++ b/styles.css
@@ -478,7 +478,9 @@ footer {
     animation: scroll 20s linear infinite;
     border-top: 2px solid lightgray;
     border-bottom: 2px solid lightgray;
-    padding-top: 13px;
+    padding-top: 10px;
+    height: 180px;
+    align-items: center;
 }
 
 .carousel-slide {
@@ -498,8 +500,11 @@ footer {
 }
 
 .carousel-slide img:hover {
-   
-    border:2px solid;
+    border: 2px solid;
+    max-width: 108%;
+    margin-left: -7px;
+    transition-duration: .2s;
+    transform: rotate(-5deg);
 }
 
 @keyframes scroll {
