--- a/styles.css
+++ b/styles.css
@@ -253,6 +253,10 @@ a {
     transform: scale(1.05);
 }
 
+.contact img{
+    width: 4%;
+    margin-top: 10px;
+}
 /* Footer */
 footer {
     padding: 20px;
@@ -500,7 +504,7 @@ footer {
 }
 
 .carousel-slide img:hover {
-    border: 2px solid;
+    border: 2px solid black;
     max-width: 108%;
     margin-left: -7px;
     transition-duration: .2s;
@@ -628,6 +632,17 @@ body {
     color: #f4f4f9; /* Light text */
 }
 
+
+
+.dark-theme .projects{
+    margin-top: -20px;
+    background: #151515;
+    border-radius: 22px 22px 0 0;
+}
+
+.dark-theme footer{
+    background: #050506;
+}
 /* Update other sections accordingly */
 
 
@@ -706,6 +721,10 @@ body {
         width:80%;
     }
 
+    .contact img{
+        width: 7%;
+        margin-top: 10px;
+    }
     .nav-links{
         height: 100vh;
     display: flex;
@@ -741,8 +760,7 @@ body {
 
 
 
-
-
+    
 
 
 
